Fixed image cropping.

--- a/style.css
+++ b/style.css
@@ -57,15 +57,19 @@ h2 {
 .directory-text {
     align-self: center;
     text-align: center;
-    background-color: rgba(20, 20, 20, 0.2);
+    background-color: rgba(20, 20, 20, 0.0);
     z-index: 1;
+    text-shadow: 0px 0px 100px rgba(0,0,0, 1);
 }
 
 .directory-img {
     position: absolute;
     height: 100%;
+    width: calc(100vw/3);
     z-index: 0;
     display: block;
+    opacity: 100%;
+    object-fit: cover;
 }
 
 .skew {
@@ -78,5 +82,5 @@ h2 {
 }
 
 .skew-compensation {
-    margin-left: calc(-100vh * 0.09); /*slope of a line 10 degrees from vertical  5.6712818*/
+    margin-left: calc(-100vh * 0.09);
 }
